--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="two container">
             <div class="left">
                 <h6>app landing page</h6>
-                <h1>get antything done with appco</h1>
+                <h1>Mariam Abas Palti and Mohaimen S. Tador</h1>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>This is my website creating for 1st and lets explore our 1st creating website have a good day and night thanks.</p>
 
                 <div class="btn">
                     <button>Download</button>
